--- a/components/services/prov-o/html.template
+++ b/components/services/prov-o/html.template
@@ -648,7 +648,7 @@
 
       var respecConfig = {
           // specification status (e.g. WD, LCWD, NOTE, etc.). If in doubt use ED.
-          specStatus:           "CR",
+          specStatus:           "WD",
           
           // the specification's short name, as in http://www.w3.org/TR/short-name/
           shortName:            "prov-o",
